--- a/README.Rmd
+++ b/README.Rmd
@@ -1,20 +1,25 @@
 ---
-title: "MMPde"
-output: html_document
+output: rmarkdown::github_document
 ---
+# MMPdesignE
+
+## Marine Monitoring Program Design Evaluation
+
+
 
 <!-- badges: start -->
   [![R-CMD-check](https://github.com/pkuhnert/MMPdesignE/workflows/R-CMD-check/badge.svg)](https://github.com/pkuhnert/MMPdesignE/actions)
   <!-- badges: end -->
   
-  <!-- badges: start -->
-  [![R-CMD-check](https://github.com/pkuhnert/MMPdesignE/workflows/R-CMD-check/badge.svg)](https://github.com/pkuhnert/MMPdesignE/actions)
-  <!-- badges: end -->  
+`MMPde` pkgdown site with vignette: https://pkuhnert.github.io/MMPde/.
 
-## Marine Monitoring Program Design Evaluation 
+## About the MMPde Package
 
 This application provides interactive supplementary material to the
-paper by Lloyd-Jones et al. (2021).
+paper by Lloyd-Jones et al. (2021). It performs a power analysis to determine 
+whether the change in design as recommended in Kuhnert et al. (2015)
+resulted in increased power to detect change for key constituents in the MMP.
+
 
 ## Installation
 
