--- a/README.Rmd
+++ b/README.Rmd
@@ -10,7 +10,7 @@ output: rmarkdown::github_document
 <!-- badges: end -->
 
  
-`MMPde` pkgdown site: https://pkuhnert.github.io/MMPde/.
+`MMPde` pkgdown site: https://pkuhnert.github.io/MMPde/
 
 ## About the MMPde Package
 
