--- a/inst/shinyApp/rmd/WQdesc.Rmd
+++ b/inst/shinyApp/rmd/WQdesc.Rmd
@@ -5,20 +5,20 @@ output: html_document
 
 ## Description of the WQ parameters
 
-In this study, we focus on the following six physical, chemical and biological water quality parameters measured on grab samples by the MMP WQ.
+In this study, we focus on the following six water quality parameters measured from grab samples by the MMP WQ.
 
-**Total suspended solids (TSS)** in milligrams per litre (mg/L). TSS is a water clarity indicator and represents solids that are not in true solution and that can be removed by filtration. Such suspended solids usually contribute directly to turbidity. Defined in waste management, these are small particles of solid pollutants that resist separation by conventional methods (www.usgs.gov).
+**Total suspended solids (TSS)** in milligrams per litre (mg/L). TSS is a measure of the suspended particulate material in the water column retained on a 0.7 µm pore size filter and is determined gravimetrically. These solids include suspended sediments (sand, silt, and clay), living plankton, and detrital (non-living organic) material. TSS concentrations are affected by oceanographic processes including primary production and resuspension, as well as inputs from other sources such as dredging and land-based run-off.  TSS is related to turbidity and water clarity.
 
-**Secchi depth (Secchi)** in metres (m). Secchi depth measures turbidity and is another is a water clarity indicator. Turbidity is the amount of solid particles that are suspended in water and that cause light rays shining through the water to scatter. Thus, turbidity makes the water cloudy or even opaque in extreme cases. Turbidity is measured in nephelometric turbidity units (NTU) (www.usgs.gov). Turbidity is affected by a wide range of factors including oceanographic processes such as resuspension of bottom sediments by wind, waves and currents; river discharge; and anthropogenic factors such as dredging and increased land-based run-off.
-
-**Particulate nitrogen (PN)** in micromoles/L (µmol/L) and Particulate phosphorus (PP) in (µmol/L). Particulate nutrients (PN and PP) are a measure of the suspended material retained on a filter with a pore size of approximately 0.7 µm. This material consists of a minor fraction of living biomass (e.g., bacteria, phytoplankton) and a major fraction of detritus (e.g., dead cells, faecal pellets). Particulate nutrient concentrations are affected by oceanographic processes (primary production, bacterial production, resuspension, and remineralisation) as well as sources such as dredging and land-based run-off.
-
-**Nitrogen oxide (NOx)** in (µmol/L). Dissolved inorganic nitrogen (NH3, NOX) measure the amount of readily available nitrogen for plankton growth in water samples. Inorganic nitrogen (NH3, NOx) represents around 1% of the nutrient pools in the Reef. The inorganic nitrogen pools are affected by a complex range of biogeochemical processes including both natural (e.g. plankton uptake, upwelling, nitrogen fixation, and remineralisation) and anthropogenic (e.g. dredging and nutrient inputs from changed land use) processes.
-
-**Chlorophyll A (Chl-a)** in micrograms/L (µg/L). Chlorophyll a (Chl-a) concentration is a measure of phytoplankton biomass in a water body; in coastal waters, it can reflect changes in river nutrient loads. In the Great Barrier Reef Water Quality Guidelines, chlorophyll-a is used as a proxy for dissolved inorganic nitrogen (Great Barrier Reef Marine Park Authority, 2010), generally considered the most readily available nitrogen form for uptake by marine plants such as phytoplankton.
+**Secchi depth (Secchi)** in metres (m). Secchi depth is a visual measure of water clarity, which is determined using a high-contrast black and white patterned disc called a Secchi disc. The Secchi depth is the average of the vertical disappearance and reappearance depths of the disc, where clarity increases with increasing Secchi depth. Secchi depth is a simple method that has been used for over 150 years, so is excellent for assessing long-term change and for cross-system comparisons. Secchi depth is affected by the amount of suspended material in the water column (related to TSS or turbidity), as well as coloured dissolved organic matter.
 
 
+**Particulate nitrogen (PN)** in micromoles/L (µmol/L). PN concentration is a measure of the suspended particulate material in the water column containing nitrogen. It is determined by filtration on a 0.7 µm pore size filter and high temperature combustion (Shimadzu TOC-V with Total Nitrogen unit). PN includes living plankton, detrital (non-living organic) material, and flocculated material including sediment-associated nitrogen. PN concentrations are affected by oceanographic processes (primary production, bacterial production, resuspension, and remineralisation) as well as sources such as dredging and land-based run-off.
 
+**Particulate phosphorus (PP)** in micromoles/L (µmol/L). PP concentration is a measure of the suspended particulate material in the water column containing phosphorus. It is determined by filtration on a 0.7 µm pore size filter and persulfate digestion and colourimetry. PP includes living plankton, detrital (non-living organic) material, and flocculated material including sediment-associated phosphorus. PP concentrations are affected by oceanographic processes (primary production, bacterial production, resuspension, and remineralisation) as well as sources such as dredging and land-based run-off.
+
+**Nitrate/nitrite (NOx)** in micromoles/L (µmol/L). NOx is a measure of the concentrations of nitrate (NO3) and nitrite (NO2) dissolved in the water column. NOx is determined by filtration through a 0.45 µm pore size filter and segmented flow analysis (Seal AA3 Analyser). In the coastal ocean, demand for NOx by primary producers is high, so NOx is rapidly taken up by phytoplankton when available. NOx concentrations are affected by a complex range of oceanographic processes (including plankton uptake, upwelling, nitrogen fixation, and remineralisation) as well as sources such as land-based run-off.
+
+**Chlorophyll a (Chl-a)** in micrograms/L (µg/L). Chl-a is a measure of green pigment found in phytoplankton and is thus a proxy for phytoplankton biomass. It is determined by filtration on a 0.7 µm pore size filter and analysis by fluorescence (Turner 10-AU fluorometer). In the coastal ocean, Chl-a has seasonal cycles and increases rapidly when dissolved nutrients (such as NOx) are available. High amounts of NOx can create phytoplankton bloom conditions causing greenish waters. Chl-a concentrations are affected by dissolved nutrient concentrations, light availability, temperature, grazing pressure, and other factors.
 
 
 
