--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,10 @@ paper by Lloyd-Jones et al. (2021). It performs a power analysis to determine
 whether the change in design as recommended in Kuhnert et al. (2015)
 resulted in increased power to detect change for key constituents in the MMP.
 
+## Shiny App
+
+This app has been deployed to the following site:  https://shiny.csiro.au/MMPdesignE/
+
 
 ## Installation
 
